# Primes

./: README.MD
PrimeCPP/: CMakeLists.txt  main.cpp  prime.cpp  prime.h
PrimeRust/: Cargo.toml
PrimeRust/benches/: my_benchmark.rs
PrimeRust/primelib/: Cargo.toml
PrimeRust/primelib/src/: bitvec.rs  lib.rs
PrimeRust/src/: bitvec.rs  main.rs  prime.rs
