[package]
name = "prime"
version = "0.1.0"
authors = ["Trond H Emaus <trondhe@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
primelib = { path = "primelib" }

[dev-dependencies.criterion]
version = "0.3"
features = ["html_reports"]

[[bench]]
name = "my_benchmark"
harness = false
